shadow shifting screen fix
practice

--- a/freshmain_small.css
+++ b/freshmain_small.css
@@ -408,7 +408,7 @@ label {
 }
 label:hover, #rad2 + label:hover, #rad3 + label:hover, #rad4 + label:hover {
   background: black;
-  box-shadow:4px 3px 9px 5px #000;
+  box-shadow:4px 0px 9px 0px #000;
   color: #fff;
   cursor: pointer;
 }
